2017-04-14  Xiaowei Zhan  <zhanxw@bunny.swmed.edu>

	* Fix a critical bug related to AF calculation (issue 15)

2017-04-12  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Support comma as a separator in parameter options

2017-03-07  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Fix SE calculation in '--single score' (continuous/binary traits)
	* Add --numThreads option (may increase speed)
	* Improve BoltLMM model
	* Add more test cases
	* Fix .dim file outputs from vcf2kinship

2017-02-28  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Fix a bug when loadindg a group of varaints
	* Fix SE calculation in '--single score' for quantitative traits
	* Fix BoltLMM implementation
	* Improve SkatO robustness
	* Revise documentation

2017-02-10  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Fix bugs (issue #13)
	* Improve supports for multi-allelic variants
	* Improve codes (more functions), revise documentation

2017-01-10  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Add more test cases
	* Add support for loading multiple phenotypes (--multiplePheno)
	* Add a score model for multiple phenotypes (--single mtscore)
	* Add an approx model for multiple phenotypes (--single fastmtscore)
	* Change bolt model options (--meta score[bolt] --boltPlink)
	* Fix a bug that crashed SKAT-O
	* Clean codes

2016-09-28  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Add a new fast meta-analysis models (--meta bolt[genotypeFile=XXX])
	* Update third libraries

2016-06-30  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Add support for MKL library (USE_MKL=[dynamic|static])

2016-06-24  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Fix a bug related to flipping to minor alleles

2016-05-16  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Optimize code (faster speed, smaller memory consumptions)

2016-05-04  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>
